--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -13,11 +13,203 @@
    "id": "7070fec0",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "695b5fcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting datasets\n",
+      "  Downloading datasets-4.4.1-py3-none-any.whl.metadata (19 kB)\n",
+      "Collecting filelock (from datasets)\n",
+      "  Downloading filelock-3.20.0-py3-none-any.whl.metadata (2.1 kB)\n",
+      "Collecting numpy>=1.17 (from datasets)\n",
+      "  Downloading numpy-2.3.5-cp312-cp312-macosx_14_0_arm64.whl.metadata (62 kB)\n",
+      "Collecting pyarrow>=21.0.0 (from datasets)\n",
+      "  Downloading pyarrow-22.0.0-cp312-cp312-macosx_12_0_arm64.whl.metadata (3.2 kB)\n",
+      "Collecting dill<0.4.1,>=0.3.0 (from datasets)\n",
+      "  Downloading dill-0.4.0-py3-none-any.whl.metadata (10 kB)\n",
+      "Collecting pandas (from datasets)\n",
+      "  Downloading pandas-2.3.3-cp312-cp312-macosx_11_0_arm64.whl.metadata (91 kB)\n",
+      "Collecting requests>=2.32.2 (from datasets)\n",
+      "  Downloading requests-2.32.5-py3-none-any.whl.metadata (4.9 kB)\n",
+      "Collecting httpx<1.0.0 (from datasets)\n",
+      "  Downloading httpx-0.28.1-py3-none-any.whl.metadata (7.1 kB)\n",
+      "Collecting tqdm>=4.66.3 (from datasets)\n",
+      "  Using cached tqdm-4.67.1-py3-none-any.whl.metadata (57 kB)\n",
+      "Collecting xxhash (from datasets)\n",
+      "  Downloading xxhash-3.6.0-cp312-cp312-macosx_11_0_arm64.whl.metadata (13 kB)\n",
+      "Collecting multiprocess<0.70.19 (from datasets)\n",
+      "  Downloading multiprocess-0.70.18-py312-none-any.whl.metadata (7.5 kB)\n",
+      "Collecting fsspec<=2025.10.0,>=2023.1.0 (from fsspec[http]<=2025.10.0,>=2023.1.0->datasets)\n",
+      "  Downloading fsspec-2025.10.0-py3-none-any.whl.metadata (10 kB)\n",
+      "Collecting huggingface-hub<2.0,>=0.25.0 (from datasets)\n",
+      "  Downloading huggingface_hub-1.1.5-py3-none-any.whl.metadata (13 kB)\n",
+      "Requirement already satisfied: packaging in /Users/luisxu/Documents/cse158/.conda/lib/python3.12/site-packages (from datasets) (25.0)\n",
+      "Collecting pyyaml>=5.1 (from datasets)\n",
+      "  Downloading pyyaml-6.0.3-cp312-cp312-macosx_11_0_arm64.whl.metadata (2.4 kB)\n",
+      "Collecting aiohttp!=4.0.0a0,!=4.0.0a1 (from fsspec[http]<=2025.10.0,>=2023.1.0->datasets)\n",
+      "  Downloading aiohttp-3.13.2-cp312-cp312-macosx_11_0_arm64.whl.metadata (8.1 kB)\n",
+      "Collecting anyio (from httpx<1.0.0->datasets)\n",
+      "  Downloading anyio-4.11.0-py3-none-any.whl.metadata (4.1 kB)\n",
+      "Collecting certifi (from httpx<1.0.0->datasets)\n",
+      "  Downloading certifi-2025.11.12-py3-none-any.whl.metadata (2.5 kB)\n",
+      "Collecting httpcore==1.* (from httpx<1.0.0->datasets)\n",
+      "  Downloading httpcore-1.0.9-py3-none-any.whl.metadata (21 kB)\n",
+      "Collecting idna (from httpx<1.0.0->datasets)\n",
+      "  Downloading idna-3.11-py3-none-any.whl.metadata (8.4 kB)\n",
+      "Collecting h11>=0.16 (from httpcore==1.*->httpx<1.0.0->datasets)\n",
+      "  Downloading h11-0.16.0-py3-none-any.whl.metadata (8.3 kB)\n",
+      "Collecting hf-xet<2.0.0,>=1.2.0 (from huggingface-hub<2.0,>=0.25.0->datasets)\n",
+      "  Downloading hf_xet-1.2.0-cp37-abi3-macosx_11_0_arm64.whl.metadata (4.9 kB)\n",
+      "Collecting shellingham (from huggingface-hub<2.0,>=0.25.0->datasets)\n",
+      "  Downloading shellingham-1.5.4-py2.py3-none-any.whl.metadata (3.5 kB)\n",
+      "Collecting typer-slim (from huggingface-hub<2.0,>=0.25.0->datasets)\n",
+      "  Downloading typer_slim-0.20.0-py3-none-any.whl.metadata (16 kB)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Users/luisxu/Documents/cse158/.conda/lib/python3.12/site-packages (from huggingface-hub<2.0,>=0.25.0->datasets) (4.15.0)\n",
+      "Collecting aiohappyeyeballs>=2.5.0 (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.10.0,>=2023.1.0->datasets)\n",
+      "  Downloading aiohappyeyeballs-2.6.1-py3-none-any.whl.metadata (5.9 kB)\n",
+      "Collecting aiosignal>=1.4.0 (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.10.0,>=2023.1.0->datasets)\n",
+      "  Downloading aiosignal-1.4.0-py3-none-any.whl.metadata (3.7 kB)\n",
+      "Collecting attrs>=17.3.0 (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.10.0,>=2023.1.0->datasets)\n",
+      "  Downloading attrs-25.4.0-py3-none-any.whl.metadata (10 kB)\n",
+      "Collecting frozenlist>=1.1.1 (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.10.0,>=2023.1.0->datasets)\n",
+      "  Downloading frozenlist-1.8.0-cp312-cp312-macosx_11_0_arm64.whl.metadata (20 kB)\n",
+      "Collecting multidict<7.0,>=4.5 (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.10.0,>=2023.1.0->datasets)\n",
+      "  Downloading multidict-6.7.0-cp312-cp312-macosx_11_0_arm64.whl.metadata (5.3 kB)\n",
+      "Collecting propcache>=0.2.0 (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.10.0,>=2023.1.0->datasets)\n",
+      "  Downloading propcache-0.4.1-cp312-cp312-macosx_11_0_arm64.whl.metadata (13 kB)\n",
+      "Collecting yarl<2.0,>=1.17.0 (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.10.0,>=2023.1.0->datasets)\n",
+      "  Downloading yarl-1.22.0-cp312-cp312-macosx_11_0_arm64.whl.metadata (75 kB)\n",
+      "Collecting charset_normalizer<4,>=2 (from requests>=2.32.2->datasets)\n",
+      "  Downloading charset_normalizer-3.4.4-cp312-cp312-macosx_10_13_universal2.whl.metadata (37 kB)\n",
+      "Collecting urllib3<3,>=1.21.1 (from requests>=2.32.2->datasets)\n",
+      "  Downloading urllib3-2.5.0-py3-none-any.whl.metadata (6.5 kB)\n",
+      "Collecting sniffio>=1.1 (from anyio->httpx<1.0.0->datasets)\n",
+      "  Downloading sniffio-1.3.1-py3-none-any.whl.metadata (3.9 kB)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/luisxu/Documents/cse158/.conda/lib/python3.12/site-packages (from pandas->datasets) (2.9.0.post0)\n",
+      "Collecting pytz>=2020.1 (from pandas->datasets)\n",
+      "  Using cached pytz-2025.2-py2.py3-none-any.whl.metadata (22 kB)\n",
+      "Collecting tzdata>=2022.7 (from pandas->datasets)\n",
+      "  Using cached tzdata-2025.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/luisxu/Documents/cse158/.conda/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas->datasets) (1.17.0)\n",
+      "Collecting click>=8.0.0 (from typer-slim->huggingface-hub<2.0,>=0.25.0->datasets)\n",
+      "  Downloading click-8.3.1-py3-none-any.whl.metadata (2.6 kB)\n",
+      "Downloading datasets-4.4.1-py3-none-any.whl (511 kB)\n",
+      "Downloading dill-0.4.0-py3-none-any.whl (119 kB)\n",
+      "Downloading fsspec-2025.10.0-py3-none-any.whl (200 kB)\n",
+      "Downloading httpx-0.28.1-py3-none-any.whl (73 kB)\n",
+      "Downloading httpcore-1.0.9-py3-none-any.whl (78 kB)\n",
+      "Downloading huggingface_hub-1.1.5-py3-none-any.whl (516 kB)\n",
+      "Downloading hf_xet-1.2.0-cp37-abi3-macosx_11_0_arm64.whl (2.7 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.7/2.7 MB\u001b[0m \u001b[31m9.9 MB/s\u001b[0m  \u001b[33m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading multiprocess-0.70.18-py312-none-any.whl (150 kB)\n",
+      "Downloading aiohttp-3.13.2-cp312-cp312-macosx_11_0_arm64.whl (491 kB)\n",
+      "Downloading multidict-6.7.0-cp312-cp312-macosx_11_0_arm64.whl (43 kB)\n",
+      "Downloading yarl-1.22.0-cp312-cp312-macosx_11_0_arm64.whl (94 kB)\n",
+      "Downloading aiohappyeyeballs-2.6.1-py3-none-any.whl (15 kB)\n",
+      "Downloading aiosignal-1.4.0-py3-none-any.whl (7.5 kB)\n",
+      "Downloading attrs-25.4.0-py3-none-any.whl (67 kB)\n",
+      "Downloading frozenlist-1.8.0-cp312-cp312-macosx_11_0_arm64.whl (50 kB)\n",
+      "Downloading h11-0.16.0-py3-none-any.whl (37 kB)\n",
+      "Downloading idna-3.11-py3-none-any.whl (71 kB)\n",
+      "Downloading numpy-2.3.5-cp312-cp312-macosx_14_0_arm64.whl (5.1 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.1/5.1 MB\u001b[0m \u001b[31m10.1 MB/s\u001b[0m  \u001b[33m0:00:00\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading propcache-0.4.1-cp312-cp312-macosx_11_0_arm64.whl (47 kB)\n",
+      "Downloading pyarrow-22.0.0-cp312-cp312-macosx_12_0_arm64.whl (34.2 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m34.2/34.2 MB\u001b[0m \u001b[31m9.2 MB/s\u001b[0m  \u001b[33m0:00:03\u001b[0mm0:00:01\u001b[0m00:01\u001b[0mm\n",
+      "\u001b[?25hDownloading pyyaml-6.0.3-cp312-cp312-macosx_11_0_arm64.whl (173 kB)\n",
+      "Downloading requests-2.32.5-py3-none-any.whl (64 kB)\n",
+      "Downloading charset_normalizer-3.4.4-cp312-cp312-macosx_10_13_universal2.whl (208 kB)\n",
+      "Downloading urllib3-2.5.0-py3-none-any.whl (129 kB)\n",
+      "Downloading certifi-2025.11.12-py3-none-any.whl (159 kB)\n",
+      "Using cached tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
+      "Downloading anyio-4.11.0-py3-none-any.whl (109 kB)\n",
+      "Downloading sniffio-1.3.1-py3-none-any.whl (10 kB)\n",
+      "Downloading filelock-3.20.0-py3-none-any.whl (16 kB)\n",
+      "Downloading pandas-2.3.3-cp312-cp312-macosx_11_0_arm64.whl (10.7 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.7/10.7 MB\u001b[0m \u001b[31m5.9 MB/s\u001b[0m  \u001b[33m0:00:01\u001b[0meta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hUsing cached pytz-2025.2-py2.py3-none-any.whl (509 kB)\n",
+      "Using cached tzdata-2025.2-py2.py3-none-any.whl (347 kB)\n",
+      "Downloading shellingham-1.5.4-py2.py3-none-any.whl (9.8 kB)\n",
+      "Downloading typer_slim-0.20.0-py3-none-any.whl (47 kB)\n",
+      "Downloading click-8.3.1-py3-none-any.whl (108 kB)\n",
+      "Downloading xxhash-3.6.0-cp312-cp312-macosx_11_0_arm64.whl (30 kB)\n",
+      "Installing collected packages: pytz, xxhash, urllib3, tzdata, tqdm, sniffio, shellingham, pyyaml, pyarrow, propcache, numpy, multidict, idna, hf-xet, h11, fsspec, frozenlist, filelock, dill, click, charset_normalizer, certifi, attrs, aiohappyeyeballs, yarl, typer-slim, requests, pandas, multiprocess, httpcore, anyio, aiosignal, httpx, aiohttp, huggingface-hub, datasets\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m36/36\u001b[0m [datasets]/36\u001b[0m [datasets]ce-hub]]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed aiohappyeyeballs-2.6.1 aiohttp-3.13.2 aiosignal-1.4.0 anyio-4.11.0 attrs-25.4.0 certifi-2025.11.12 charset_normalizer-3.4.4 click-8.3.1 datasets-4.4.1 dill-0.4.0 filelock-3.20.0 frozenlist-1.8.0 fsspec-2025.10.0 h11-0.16.0 hf-xet-1.2.0 httpcore-1.0.9 httpx-0.28.1 huggingface-hub-1.1.5 idna-3.11 multidict-6.7.0 multiprocess-0.70.18 numpy-2.3.5 pandas-2.3.3 propcache-0.4.1 pyarrow-22.0.0 pytz-2025.2 pyyaml-6.0.3 requests-2.32.5 shellingham-1.5.4 sniffio-1.3.1 tqdm-4.67.1 typer-slim-0.20.0 tzdata-2025.2 urllib3-2.5.0 xxhash-3.6.0 yarl-1.22.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e982f75c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/luisxu/Documents/cse158/.conda/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "ds = load_dataset(\"ZephyrUtopia/ratemyprofessors_reviews\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b1c86965",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df_train = ds[\"train\"].to_pandas()\n",
+    "df_test = ds[\"test\"].to_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eda9d2ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
