--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -195,9 +195,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:.conda]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-.conda-py"
   },
   "language_info": {
    "codemirror_mode": {
