--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -5,7 +5,7 @@
    "id": "2019d856",
    "metadata": {},
    "source": [
-    "# Predicting Rate my Professor Rating"
+    "# Predicting Rate my Professor Ratings"
    ]
   },
   {
@@ -13,7 +13,9 @@
    "id": "7070fec0",
    "metadata": {},
    "source": [
-    "Here "
+    "### Identifying the predictive Task \n",
+    "\n",
+    "In this project we will analyze a dataset of user's rate my professor ratings and predict what rating a user will give to a certain professor"
    ]
   },
   {
@@ -189,11 +191,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "eda9d2ec",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Exploratory Analysis, Data Collection, Preprocessing, and Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d4a8ed9",
+   "metadata": {},
+   "source": [
+    "### Modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a276ac6",
+   "metadata": {},
+   "source": [
+    "### Evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "126e93e1",
+   "metadata": {},
+   "source": [
+    "### Discussion of Related Work"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e7b3569",
+   "metadata": {},
    "source": []
   }
  ],
