finished identification/intro section

--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "### Identifying the predictive Task \n",
     "\n",
-    "In this project we will analyze a dataset of user's rate my professor ratings and predict what rating a user will give to a certain professor"
+    "In this project we will analyze a dataset of user's rate my professor ratings and predict what rating a user will give to a certain professor. "
    ]
   },
   {
