finished identification/intro section

--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -15,7 +15,21 @@
    "source": [
     "### Identifying the predictive Task \n",
     "\n",
-    "In this project we will analyze a dataset of user's rate my professor ratings and predict what rating a user will give to a certain professor. "
+    "**What is our predictive task?**\n",
+    "\n",
+    "In this project we will analyze a dataset of user's rate my professor ratings and predict what rating a user will give to a certain professor. Our data set contains 5 features: professor name, review text, rating, difficulty and time/date the review was written.\n",
+    "\n",
+    "**How will we evaluate our model?**\n",
+    "\n",
+    "To evaluate this model, we will use MSE, MAE, and RMSE for each of our models based on the our predicted labels and the validation set. \n",
+    "\n",
+    "**What are our baselines?**\n",
+    "\n",
+    "Relevant baselines to compare to our prediction models to would be a naive model which only predicts the global mean for each professor. We will calculate the global mean of the entire data set (ie.. every rating of every professor) for the baseline prediction.\n",
+    "\n",
+    "**How do we know our model is valid?**\n",
+    "\n",
+    "To ensure the validity of our model, we will compare the RMSE, MSE, and MAE of our model in comparison to the naive mean prediction to ensure that our model performs better than than the baseline. Additionally, we will train the model on a subset of the data set and allocate another portion as our test set to guarantee that our model works for data it has not yet been trained on which is a direct indicator of it's real world performance. "
    ]
   },
   {
