code in modeling

--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "e982f75c",
    "metadata": {},
    "outputs": [
@@ -164,10 +164,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jgamba/anaconda3/envs/CSE158R/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Generating train split: 100%|██████████| 336239/336239 [00:00<00:00, 2666057.79 examples/s]\n",
-      "Generating test split: 100%|██████████| 144103/144103 [00:00<00:00, 1925712.38 examples/s]\n"
+      "/Users/luisxu/Documents/cse158/.conda/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -179,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "b1c86965",
    "metadata": {},
    "outputs": [],
@@ -207,6 +205,293 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bed33086",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "def MSE(y, ypred):\n",
+    "    y = np.array(y, dtype=float)\n",
+    "    ypred = np.array(ypred, dtype=float)\n",
+    "    return np.mean((y - ypred) ** 2)\n",
+    "\n",
+    "def getGlobalAverage(trainRatings):\n",
+    "    # Return the average rating in the training set\n",
+    "    return np.mean(trainRatings)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7133f06b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>text</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>difficulty</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Leila Hawana</td>\n",
+       "      <td>Although the homework is not too much, they ar...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2018-11-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Gloria Magana</td>\n",
+       "      <td>Where can I start she's a very tough grader. H...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2020-12-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Teresa Canganelli</td>\n",
+       "      <td>She is a wonderful professor! Very interactive...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2020-02-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Kumar Ankit</td>\n",
+       "      <td>Study solutions had incorrect answers taken fr...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2018-12-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Irina Garces</td>\n",
+       "      <td>Super nice and helpful. Was always there in of...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2019-05-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>336234</th>\n",
+       "      <td>Ruth Chananie</td>\n",
+       "      <td>Great professor, weekly discussions. Great wri...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2021-12-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>336235</th>\n",
+       "      <td>Jennifer Baggett</td>\n",
+       "      <td>She is an amazing teacher and a great person t...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2021-05-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>336236</th>\n",
+       "      <td>JoAnn Balingit</td>\n",
+       "      <td>Really fun professor! Her class is super inter...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2018-10-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>336237</th>\n",
+       "      <td>Jacobson Blomquist</td>\n",
+       "      <td>This professor holds the textbook and reads ou...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2018-12-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>336238</th>\n",
+       "      <td>Shuhebur Rahman</td>\n",
+       "      <td>He makes class very interesting and you always...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2022-12-15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>336239 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      name                                               text  \\\n",
+       "0             Leila Hawana  Although the homework is not too much, they ar...   \n",
+       "1            Gloria Magana  Where can I start she's a very tough grader. H...   \n",
+       "2        Teresa Canganelli  She is a wonderful professor! Very interactive...   \n",
+       "3              Kumar Ankit  Study solutions had incorrect answers taken fr...   \n",
+       "4             Irina Garces  Super nice and helpful. Was always there in of...   \n",
+       "...                    ...                                                ...   \n",
+       "336234       Ruth Chananie  Great professor, weekly discussions. Great wri...   \n",
+       "336235    Jennifer Baggett  She is an amazing teacher and a great person t...   \n",
+       "336236      JoAnn Balingit  Really fun professor! Her class is super inter...   \n",
+       "336237  Jacobson Blomquist  This professor holds the textbook and reads ou...   \n",
+       "336238     Shuhebur Rahman  He makes class very interesting and you always...   \n",
+       "\n",
+       "       rating difficulty       date  \n",
+       "0         4.0        5.0 2018-11-01  \n",
+       "1         1.0        5.0 2020-12-15  \n",
+       "2         5.0        4.0 2020-02-20  \n",
+       "3         1.0        4.0 2018-12-11  \n",
+       "4         5.0        4.0 2019-05-15  \n",
+       "...       ...        ...        ...  \n",
+       "336234    5.0        3.0 2021-12-12  \n",
+       "336235    5.0        2.0 2021-05-20  \n",
+       "336236    5.0        2.0 2018-10-31  \n",
+       "336237    1.0        4.0 2018-12-11  \n",
+       "336238    5.0        3.0 2022-12-15  \n",
+       "\n",
+       "[336239 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "51c5b9e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.7674704600001783\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_ratings = np.array(df_train['rating'], dtype='float')\n",
+    "test_ratings = np.array(df_test['rating'], dtype='float')\n",
+    "print(getGlobalAverage(train_ratings))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a6b4c749",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.4709575975729883\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(MSE(train_ratings, getGlobalAverage(train_ratings)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c0ddb60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "python(26056) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting scikit-learn\n",
+      "  Using cached scikit_learn-1.7.2-cp312-cp312-macosx_12_0_arm64.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: numpy>=1.22.0 in /Users/luisxu/Documents/cse158/.conda/lib/python3.12/site-packages (from scikit-learn) (2.3.5)\n",
+      "Requirement already satisfied: scipy>=1.8.0 in /Users/luisxu/Documents/cse158/.conda/lib/python3.12/site-packages (from scikit-learn) (1.16.3)\n",
+      "Collecting joblib>=1.2.0 (from scikit-learn)\n",
+      "  Using cached joblib-1.5.2-py3-none-any.whl.metadata (5.6 kB)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in /Users/luisxu/Documents/cse158/.conda/lib/python3.12/site-packages (from scikit-learn) (3.6.0)\n",
+      "Using cached scikit_learn-1.7.2-cp312-cp312-macosx_12_0_arm64.whl (8.6 MB)\n",
+      "\u001b[31mERROR: Could not install packages due to an OSError: [Errno 28] No space left on device\n",
+      "\u001b[0m\u001b[31m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2a033924",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpreprocessing\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m OneHotEncoder\n\u001b[32m      3\u001b[39m df_train[\u001b[33m\"\u001b[39m\u001b[33mtimestamp\u001b[39m\u001b[33m\"\u001b[39m] = pd.to_datetime(df_train[\u001b[33m\"\u001b[39m\u001b[33mdate\u001b[39m\u001b[33m\"\u001b[39m])\n\u001b[32m      4\u001b[39m df_train[\u001b[33m\"\u001b[39m\u001b[33myear\u001b[39m\u001b[33m\"\u001b[39m] = df_train[\u001b[33m\"\u001b[39m\u001b[33mtimestamp\u001b[39m\u001b[33m\"\u001b[39m].dt.year\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'sklearn'"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "df_train[\"timestamp\"] = pd.to_datetime(df_train[\"date\"])\n",
+    "df_train[\"year\"] = df_train[\"timestamp\"].dt.year\n",
+    "df_train[\"month\"] = df_train[\"timestamp\"].dt.month\n",
+    "df_train[\"dayofweek\"] = df_train[\"timestamp\"].dt.dayofweek\n",
+    "df_train[\"day\"] = df_train[\"timestamp\"].dt.day\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5a276ac6",
    "metadata": {},
@@ -231,13 +516,9 @@
  ],
  "metadata": {
   "kernelspec": {
-<<<<<<< HEAD
-   "display_name": "Python [conda env:.conda]",
-=======
-   "display_name": "CSE158R",
->>>>>>> ab1ee660a236fee575c033c2cdb5e1436364f37c
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-.conda-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -249,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
