Added dataset description

--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -212,6 +212,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c0260088",
+   "metadata": {},
+   "source": [
+    "**Dataset**\n",
+    "\n",
+    "Our data comes from HuggingFace and was collected through webscraping 480,000 RateMyProfessors reviews. The dataset is split into a training set with 336,000 images and a test set with 144,000 images. Each data vector contains 5 features:\n",
+    "- Name of instructor\n",
+    "- Review text\n",
+    "- Course rating\n",
+    "- Course difficulty\n",
+    "- Date submitted"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7d4a8ed9",
    "metadata": {},
    "source": [
