comments for modeling

--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -468,176 +468,8 @@
     "    return np.mean((y - ypred) ** 2)\n",
     "\n",
     "def getGlobalAverage(trainRatings):\n",
-    "    # Return the average rating in the training set\n",
     "    return np.mean(trainRatings)\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "7133f06b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>text</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>difficulty</th>\n",
-       "      <th>date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Leila Hawana</td>\n",
-       "      <td>Although the homework is not too much, they ar...</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2018-11-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Gloria Magana</td>\n",
-       "      <td>Where can I start she's a very tough grader. H...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2020-12-15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Teresa Canganelli</td>\n",
-       "      <td>She is a wonderful professor! Very interactive...</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2020-02-20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Kumar Ankit</td>\n",
-       "      <td>Study solutions had incorrect answers taken fr...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2018-12-11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Irina Garces</td>\n",
-       "      <td>Super nice and helpful. Was always there in of...</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2019-05-15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>336234</th>\n",
-       "      <td>Ruth Chananie</td>\n",
-       "      <td>Great professor, weekly discussions. Great wri...</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2021-12-12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>336235</th>\n",
-       "      <td>Jennifer Baggett</td>\n",
-       "      <td>She is an amazing teacher and a great person t...</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2021-05-20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>336236</th>\n",
-       "      <td>JoAnn Balingit</td>\n",
-       "      <td>Really fun professor! Her class is super inter...</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2018-10-31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>336237</th>\n",
-       "      <td>Jacobson Blomquist</td>\n",
-       "      <td>This professor holds the textbook and reads ou...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2018-12-11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>336238</th>\n",
-       "      <td>Shuhebur Rahman</td>\n",
-       "      <td>He makes class very interesting and you always...</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2022-12-15</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>336239 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      name                                               text  \\\n",
-       "0             Leila Hawana  Although the homework is not too much, they ar...   \n",
-       "1            Gloria Magana  Where can I start she's a very tough grader. H...   \n",
-       "2        Teresa Canganelli  She is a wonderful professor! Very interactive...   \n",
-       "3              Kumar Ankit  Study solutions had incorrect answers taken fr...   \n",
-       "4             Irina Garces  Super nice and helpful. Was always there in of...   \n",
-       "...                    ...                                                ...   \n",
-       "336234       Ruth Chananie  Great professor, weekly discussions. Great wri...   \n",
-       "336235    Jennifer Baggett  She is an amazing teacher and a great person t...   \n",
-       "336236      JoAnn Balingit  Really fun professor! Her class is super inter...   \n",
-       "336237  Jacobson Blomquist  This professor holds the textbook and reads ou...   \n",
-       "336238     Shuhebur Rahman  He makes class very interesting and you always...   \n",
-       "\n",
-       "       rating difficulty       date  \n",
-       "0         4.0        5.0 2018-11-01  \n",
-       "1         1.0        5.0 2020-12-15  \n",
-       "2         5.0        4.0 2020-02-20  \n",
-       "3         1.0        4.0 2018-12-11  \n",
-       "4         5.0        4.0 2019-05-15  \n",
-       "...       ...        ...        ...  \n",
-       "336234    5.0        3.0 2021-12-12  \n",
-       "336235    5.0        2.0 2021-05-20  \n",
-       "336236    5.0        2.0 2018-10-31  \n",
-       "336237    1.0        4.0 2018-12-11  \n",
-       "336238    5.0        3.0 2022-12-15  \n",
-       "\n",
-       "[336239 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_train"
    ]
   },
   {
@@ -655,6 +487,7 @@
     }
    ],
    "source": [
+    "# find average rating of training dataset\n",
     "train_ratings = np.array(df_train['rating'], dtype='float')\n",
     "test_ratings = np.array(df_test['rating'], dtype='float')\n",
     "print(getGlobalAverage(train_ratings))"
@@ -675,29 +508,8 @@
     }
    ],
    "source": [
+    "# baseline model, just predict global average\n",
     "print(MSE(train_ratings, getGlobalAverage(train_ratings)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "9c0ddb60",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: scikit-learn in /home/jgamba/anaconda3/envs/CSE158R/lib/python3.11/site-packages (1.7.2)\n",
-      "Requirement already satisfied: numpy>=1.22.0 in /home/jgamba/anaconda3/envs/CSE158R/lib/python3.11/site-packages (from scikit-learn) (2.3.5)\n",
-      "Requirement already satisfied: scipy>=1.8.0 in /home/jgamba/anaconda3/envs/CSE158R/lib/python3.11/site-packages (from scikit-learn) (1.16.3)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in /home/jgamba/anaconda3/envs/CSE158R/lib/python3.11/site-packages (from scikit-learn) (1.5.2)\n",
-      "Requirement already satisfied: threadpoolctl>=3.1.0 in /home/jgamba/anaconda3/envs/CSE158R/lib/python3.11/site-packages (from scikit-learn) (3.6.0)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install scikit-learn"
    ]
   },
   {
@@ -707,6 +519,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create time-based features for the data\n",
+    "\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
     "df_train[\"timestamp\"] = pd.to_datetime(df_train[\"date\"])\n",
@@ -723,6 +537,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create TF-IDF Vectorizer feature\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
     "text_vectorizer = TfidfVectorizer(\n",
@@ -739,6 +554,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# combine features using ColumnTransformer\n",
+    "\n",
     "from sklearn.compose import ColumnTransformer\n",
     "\n",
     "X = df_train[[\"name\", \"difficulty\", \"year\", \"month\", \"day\", \"dayofweek\", \"text\"]]\n",
@@ -760,6 +577,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# use pipeline to process features and put through ridge regression model\n",
+    "\n",
     "from sklearn.linear_model import Ridge\n",
     "from sklearn.pipeline import Pipeline\n",
     "\n",
@@ -1873,9 +1692,11 @@
     }
    ],
    "source": [
+    "# fit model to subset of training set\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(\n",
     "    X, y, test_size=0.2, random_state=42\n",
     ")\n",
     "\n",
@@ -1897,11 +1718,13 @@
     }
    ],
    "source": [
+    "# clip ratings so they fall in the range, then predict on validation subset of the training set and find mse\n",
+    "\n",
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "preds = model.predict(X_test)\n",
+    "preds = model.predict(X_valid)\n",
     "preds = np.clip(preds, a_min=1, a_max=5)\n",
-    "mse = mean_squared_error(y_test, preds)\n",
+    "mse = mean_squared_error(y_valid, preds)\n",
     "print(\"MSE:\", mse)"
    ]
   },
@@ -1912,6 +1735,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create date features for the test dataset\n",
+    "\n",
     "df_test[\"timestamp\"] = pd.to_datetime(df_test[\"date\"])\n",
     "df_test[\"year\"] = df_test[\"timestamp\"].dt.year\n",
     "df_test[\"month\"] = df_test[\"timestamp\"].dt.month\n",
@@ -1934,8 +1759,10 @@
     }
    ],
    "source": [
-    "X_valid = df_test[[\"name\", \"difficulty\", \"year\", \"month\", \"day\", \"dayofweek\", \"text\"]]\n",
-    "y_valid = df_test[\"rating\"]\n",
+    "# predict on ratings from the test dataset to find MSE\n",
+    "\n",
+    "X_test = df_test[[\"name\", \"difficulty\", \"year\", \"month\", \"day\", \"dayofweek\", \"text\"]]\n",
+    "y_test = df_test[\"rating\"]\n",
     "\n",
     "preds = model.predict(X_valid)\n",
     "preds = np.clip(preds, a_min=1, a_max=5)\n",
